@@ -4,13 +4,13 @@
       "Erik Carlsson <info@code301.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.043, Dist::Iller version 0.1203, CPAN::Meta::Converter version 2.143240",
+   "generated_by" : "Dist::Zilla version 5.043, Dist::Iller version 0.1406, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "perl_5"
    ],
    "meta-spec" : {
       "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
-      "version" : "2"
+      "version" : 2
    },
    "name" : "Badge-Depot-Plugin-Perl",
    "no_index" : {
@@ -31,14 +31,18 @@
       },
       "develop" : {
          "requires" : {
+            "Dist::Zilla::Plugin::Authority" : "1.009",
+            "Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional" : "0",
+            "Dist::Zilla::Plugin::ChangeStats::Dependencies::Git" : "0",
             "Dist::Zilla::Plugin::CheckChangesHasContent" : "0",
-            "Dist::Zilla::Plugin::CheckExtraTests" : "0",
             "Dist::Zilla::Plugin::Clean" : "0",
             "Dist::Zilla::Plugin::ConfirmRelease" : "0",
             "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
             "Dist::Zilla::Plugin::DistIller::MetaGeneratedBy" : "0",
             "Dist::Zilla::Plugin::ExecDir" : "0",
             "Dist::Zilla::Plugin::Git::Check" : "0",
+            "Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch" : "0.013",
+            "Dist::Zilla::Plugin::Git::Commit" : "0",
             "Dist::Zilla::Plugin::Git::Contributors" : "0",
             "Dist::Zilla::Plugin::Git::GatherDir" : "0",
             "Dist::Zilla::Plugin::Git::Push" : "0",
@@ -54,21 +58,24 @@
             "Dist::Zilla::Plugin::MetaProvides::Class" : "0",
             "Dist::Zilla::Plugin::MetaProvides::Package" : "0",
             "Dist::Zilla::Plugin::MetaYAML" : "0",
-            "Dist::Zilla::Plugin::NextRelease" : "0",
-            "Dist::Zilla::Plugin::NextVersion::Semantic" : "0",
-            "Dist::Zilla::Plugin::OurPkgVersion" : "0",
+            "Dist::Zilla::Plugin::NextRelease::Grouped" : "0",
             "Dist::Zilla::Plugin::PodSyntaxTests" : "0",
             "Dist::Zilla::Plugin::PodWeaver" : "0",
             "Dist::Zilla::Plugin::PodnameFromClassname" : "0",
             "Dist::Zilla::Plugin::Prereqs" : "0",
             "Dist::Zilla::Plugin::Prereqs::Plugins" : "0",
-            "Dist::Zilla::Plugin::PreviousVersion::Changelog" : "0",
             "Dist::Zilla::Plugin::Readme" : "0",
             "Dist::Zilla::Plugin::ReadmeAnyFromPod" : "0",
-            "Dist::Zilla::Plugin::ReversionOnRelease" : "0",
+            "Dist::Zilla::Plugin::RewriteVersion::Transitional" : "0.007",
             "Dist::Zilla::Plugin::RunExtraTests" : "0",
             "Dist::Zilla::Plugin::ShareDir" : "0",
+            "Dist::Zilla::Plugin::Test::Compile" : "0",
+            "Dist::Zilla::Plugin::Test::EOF" : "0",
+            "Dist::Zilla::Plugin::Test::EOL" : "0",
+            "Dist::Zilla::Plugin::Test::Kwalitee::Extra" : "0",
+            "Dist::Zilla::Plugin::Test::NoTabs" : "0",
             "Dist::Zilla::Plugin::Test::ReportPrereqs" : "0",
+            "Dist::Zilla::Plugin::Test::Version" : "0",
             "Dist::Zilla::Plugin::TestRelease" : "0",
             "Dist::Zilla::Plugin::TravisYML" : "0",
             "Dist::Zilla::Plugin::UploadToCPAN" : "0",
@@ -86,8 +93,15 @@
             "Pod::Weaver::Section::Region" : "0",
             "Pod::Weaver::Section::Source::DefaultGitHub" : "0",
             "Pod::Weaver::Section::Version" : "0",
+            "Test::EOL" : "0",
+            "Test::More" : "0.88",
+            "Test::NoTabs" : "0",
             "Test::Pod" : "1.41",
             "Test::Warnings" : "0"
+         },
+         "suggests" : {
+            "Dist::Iller" : "0.1406",
+            "Dist::Iller::Config::Author::CSSON" : "0.0307"
          }
       },
       "runtime" : {
@@ -100,7 +114,7 @@
             "Types::Standard" : "0",
             "Types::URI" : "0",
             "namespace::autoclean" : "0",
-            "perl" : "5.010001"
+            "perl" : "5.010000"
          }
       },
       "test" : {
@@ -110,6 +124,8 @@
          "requires" : {
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
+            "IO::Handle" : "0",
+            "IPC::Open3" : "0",
             "Test::More" : "0.96"
          }
       }
@@ -117,7 +133,7 @@
    "provides" : {
       "Badge::Depot::Plugin::Perl" : {
          "file" : "lib/Badge/Depot/Plugin/Perl.pm",
-         "version" : "0.0103"
+         "version" : "0.0104"
       }
    },
    "release_status" : "stable",
@@ -132,6 +148,7 @@
          "web" : "https://github.com/Csson/p5-Badge-Depot-Plugin-Perl"
       }
    },
-   "version" : "0.0103"
+   "version" : "0.0104",
+   "x_authority" : "cpan:CSSON"
 }
 
