@@ -1,6 +1,6 @@
-; This file was auto-generated from iller.yaml on 2016-01-11 15:21:41 UTC.
-; Used configs:
-; * Dist::Iller::Config::Author::CSSON: 0.0103
+; This file was auto-generated from iller.yaml by Dist::Iller on 2016-02-17 16:50:40 UTC.
+; The following configs were used:
+; * Dist::Iller::Config::Author::CSSON: 0.0307
 
 name = Badge-Depot-Plugin-Perl
 author = Erik Carlsson <info@code301.com>
@@ -19,24 +19,34 @@ copy = META.json
 copy = LICENSE
 copy = Makefile.PL
 
-[ReversionOnRelease]
-prompt = 1
+[Authority]
+authority = cpan:CSSON
+locate_comment = 1
 
-[OurPkgVersion]
+[RewriteVersion::Transitional]
+
+[ChangeStats::Dependencies::Git]
+add_to_first_release = 1
+do_stats = 1
+group = Stats & Dependency Changes
+stats_skip_file = META.json
+stats_skip_file = Changes
+stats_skip_file = LICENSE
+stats_skip_file = dist.ini
+stats_skip_file = weaver.ini
+stats_skip_file = cpanfile
+stats_skip_file = .gitignore
+stats_skip_file = .travis.yml
+stats_skip_file = Makefile.PL
+stats_skip_file = README.md
+stats_text =
+
+[NextRelease::Grouped]
+auto_order = 0
+format_date = %{yyyy-MM-dd HH:mm:ss VVV}d
+groups = API Changes, New Features, Enhancements, Requirements, Testing, Other Changes, Bug Fixes, Documentation, Stats & Dependency Changes
 
 [PodnameFromClassname]
-
-[NextRelease]
-format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
-
-[PreviousVersion::Changelog]
-
-[NextVersion::Semantic]
-format = %d.%02d%02d
-major =
-minor = API Changes, New Features, Enhancements
-numify_version = 0
-revision = Requirements, Testing, Other Changes, Bug Fixes, Documentation
 
 [PodWeaver]
 
@@ -81,6 +91,18 @@ directory = examples
 
 [Git::Contributors]
 
+[Test::Kwalitee::Extra]
+
+[Test::NoTabs]
+
+[Test::EOL]
+
+[Test::EOF]
+
+[Test::Version]
+
+[Test::Compile]
+
 [Test::ReportPrereqs]
 
 [PodSyntaxTests]
@@ -88,8 +110,6 @@ directory = examples
 [MetaYAML]
 
 [License]
-
-[CheckExtraTests]
 
 [RunExtraTests]
 
@@ -103,6 +123,10 @@ directory = examples
 
 [CheckChangesHasContent]
 
+[Git::CheckFor::CorrectBranch]
+release_branch = master
+release_branch = release
+
 [TestRelease]
 
 [ConfirmRelease]
@@ -110,21 +134,78 @@ directory = examples
 [UploadToCPAN]
 
 [TravisYML]
-perl_version = 5.14 5.16 5.18 5.20 5.22
+perl_version = 5.10 5.12 5.14 5.16 5.18 5.20 5.22
+
+[Git::Commit / CommitBeforeTag]
+allow_dirty_match = .
+commit_msg = Release %v%n%n%c
 
 [Git::Tag]
 tag_format = %v
-tag_message =
-
-[Git::Push]
-remotes_must_exist = 1
+tag_message = Release %v%n%n%c
 
 [InstallRelease]
 install_command = cpanm .
 
+[BumpVersionAfterRelease::Transitional]
+
+[Git::Commit / CommitAfterRelease]
+allow_dirty_match = .
+commit_msg = Bump version after %v
+
+[Git::Push]
+remotes_must_exist = 1
+
 [Clean]
 
 [Prereqs / DevelopRequires]
+Dist::Zilla::Plugin::Authority = 1.009
+Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0
+Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0
+Dist::Zilla::Plugin::CheckChangesHasContent = 0
+Dist::Zilla::Plugin::Clean = 0
+Dist::Zilla::Plugin::ConfirmRelease = 0
+Dist::Zilla::Plugin::CopyFilesFromBuild = 0
+Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
+Dist::Zilla::Plugin::ExecDir = 0
+Dist::Zilla::Plugin::Git::Check = 0
+Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.013
+Dist::Zilla::Plugin::Git::Commit = 0
+Dist::Zilla::Plugin::Git::Contributors = 0
+Dist::Zilla::Plugin::Git::GatherDir = 0
+Dist::Zilla::Plugin::Git::Push = 0
+Dist::Zilla::Plugin::Git::Tag = 0
+Dist::Zilla::Plugin::GithubMeta = 0
+Dist::Zilla::Plugin::InstallRelease = 0
+Dist::Zilla::Plugin::License = 0
+Dist::Zilla::Plugin::MakeMaker = 0
+Dist::Zilla::Plugin::Manifest = 0
+Dist::Zilla::Plugin::ManifestSkip = 0
+Dist::Zilla::Plugin::MetaJSON = 0
+Dist::Zilla::Plugin::MetaNoIndex = 0
+Dist::Zilla::Plugin::MetaProvides::Class = 0
+Dist::Zilla::Plugin::MetaProvides::Package = 0
+Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::NextRelease::Grouped = 0
+Dist::Zilla::Plugin::PodSyntaxTests = 0
+Dist::Zilla::Plugin::PodWeaver = 0
+Dist::Zilla::Plugin::PodnameFromClassname = 0
+Dist::Zilla::Plugin::Prereqs::Plugins = 0
+Dist::Zilla::Plugin::Readme = 0
+Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
+Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
+Dist::Zilla::Plugin::RunExtraTests = 0
+Dist::Zilla::Plugin::ShareDir = 0
+Dist::Zilla::Plugin::Test::Compile = 0
+Dist::Zilla::Plugin::Test::EOF = 0
+Dist::Zilla::Plugin::Test::EOL = 0
+Dist::Zilla::Plugin::Test::Kwalitee::Extra = 0
+Dist::Zilla::Plugin::Test::NoTabs = 0
+Dist::Zilla::Plugin::Test::ReportPrereqs = 0
+Dist::Zilla::Plugin::Test::Version = 0
+Dist::Zilla::Plugin::TestRelease = 0
+Dist::Zilla::Plugin::TravisYML = 0
+Dist::Zilla::Plugin::UploadToCPAN = 0
 Pod::Elemental::Transformer::List = 0
 Pod::Weaver::Plugin::SingleEncoding = 0
 Pod::Weaver::Plugin::Transformer = 0
@@ -139,7 +220,12 @@ Pod::Weaver::Section::Name = 0
 Pod::Weaver::Section::Region = 0
 Pod::Weaver::Section::Source::DefaultGitHub = 0
 Pod::Weaver::Section::Version = 0
+Test::NoTabs = 0
 Test::Warnings = 0
+
+[Prereqs / DevelopSuggests]
+Dist::Iller = 0.1406
+Dist::Iller::Config::Author::CSSON = 0.0307
 
 [Prereqs / RuntimeRequires]
 Badge::Depot = 0
@@ -150,32 +236,71 @@ Path::Tiny = 0
 Types::Standard = 0
 Types::URI = 0
 namespace::autoclean = 0
-perl = 5.010001
+perl = 5.010000
 
 [Prereqs / TestRequires]
 Test::More = 0.96
 
-; authordep Moose
-; authordep Badge::Depot
-; authordep JSON::MaybeXS
-; authordep Path::Tiny
-; authordep MooseX::AttributeShortcuts
-; authordep namespace::autoclean
-; authordep Types::Standard
-; authordep Types::URI
-; authordep Test::Warnings
-; authordep Test::More
-; authordep Pod::Weaver::PluginBundle::CorePrep
-; authordep Pod::Weaver::Plugin::SingleEncoding
-; authordep Pod::Weaver::Section::Name
-; authordep Pod::Weaver::Section::Version
-; authordep Pod::Weaver::Section::Region
-; authordep Pod::Weaver::Section::Generic
-; authordep Pod::Weaver::Section::Collect
-; authordep Pod::Weaver::Section::Leftovers
-; authordep Pod::Weaver::Section::Source::DefaultGitHub
-; authordep Pod::Weaver::Section::Homepage::DefaultCPAN
-; authordep Pod::Weaver::Section::Authors
-; authordep Pod::Weaver::Section::Legal
-; authordep Pod::Elemental::Transformer::List
-; authordep Pod::Weaver::Plugin::Transformer
+; authordep Dist::Zilla::Plugin::Authority = 1.009
+; authordep Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0
+; authordep Dist::Zilla::Plugin::ChangeStats::Dependencies::Git = 0
+; authordep Dist::Zilla::Plugin::CheckChangesHasContent = 0
+; authordep Dist::Zilla::Plugin::Clean = 0
+; authordep Dist::Zilla::Plugin::ConfirmRelease = 0
+; authordep Dist::Zilla::Plugin::CopyFilesFromBuild = 0
+; authordep Dist::Zilla::Plugin::DistIller::MetaGeneratedBy = 0
+; authordep Dist::Zilla::Plugin::ExecDir = 0
+; authordep Dist::Zilla::Plugin::Git::Check = 0
+; authordep Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch = 0.013
+; authordep Dist::Zilla::Plugin::Git::Commit = 0
+; authordep Dist::Zilla::Plugin::Git::Contributors = 0
+; authordep Dist::Zilla::Plugin::Git::GatherDir = 0
+; authordep Dist::Zilla::Plugin::Git::Push = 0
+; authordep Dist::Zilla::Plugin::Git::Tag = 0
+; authordep Dist::Zilla::Plugin::GithubMeta = 0
+; authordep Dist::Zilla::Plugin::InstallRelease = 0
+; authordep Dist::Zilla::Plugin::License = 0
+; authordep Dist::Zilla::Plugin::MakeMaker = 0
+; authordep Dist::Zilla::Plugin::Manifest = 0
+; authordep Dist::Zilla::Plugin::ManifestSkip = 0
+; authordep Dist::Zilla::Plugin::MetaJSON = 0
+; authordep Dist::Zilla::Plugin::MetaNoIndex = 0
+; authordep Dist::Zilla::Plugin::MetaProvides::Class = 0
+; authordep Dist::Zilla::Plugin::MetaProvides::Package = 0
+; authordep Dist::Zilla::Plugin::MetaYAML = 0
+; authordep Dist::Zilla::Plugin::NextRelease::Grouped = 0
+; authordep Dist::Zilla::Plugin::PodSyntaxTests = 0
+; authordep Dist::Zilla::Plugin::PodWeaver = 0
+; authordep Dist::Zilla::Plugin::PodnameFromClassname = 0
+; authordep Dist::Zilla::Plugin::Prereqs::Plugins = 0
+; authordep Dist::Zilla::Plugin::Readme = 0
+; authordep Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
+; authordep Dist::Zilla::Plugin::RewriteVersion::Transitional = 0.007
+; authordep Dist::Zilla::Plugin::RunExtraTests = 0
+; authordep Dist::Zilla::Plugin::ShareDir = 0
+; authordep Dist::Zilla::Plugin::Test::Compile = 0
+; authordep Dist::Zilla::Plugin::Test::EOF = 0
+; authordep Dist::Zilla::Plugin::Test::EOL = 0
+; authordep Dist::Zilla::Plugin::Test::Kwalitee::Extra = 0
+; authordep Dist::Zilla::Plugin::Test::NoTabs = 0
+; authordep Dist::Zilla::Plugin::Test::ReportPrereqs = 0
+; authordep Dist::Zilla::Plugin::Test::Version = 0
+; authordep Dist::Zilla::Plugin::TestRelease = 0
+; authordep Dist::Zilla::Plugin::TravisYML = 0
+; authordep Dist::Zilla::Plugin::UploadToCPAN = 0
+; authordep Pod::Elemental::Transformer::List = 0
+; authordep Pod::Weaver::Plugin::SingleEncoding = 0
+; authordep Pod::Weaver::Plugin::Transformer = 0
+; authordep Pod::Weaver::PluginBundle::CorePrep = 0
+; authordep Pod::Weaver::Section::Authors = 0
+; authordep Pod::Weaver::Section::Collect = 0
+; authordep Pod::Weaver::Section::Generic = 0
+; authordep Pod::Weaver::Section::Homepage::DefaultCPAN = 0
+; authordep Pod::Weaver::Section::Leftovers = 0
+; authordep Pod::Weaver::Section::Legal = 0
+; authordep Pod::Weaver::Section::Name = 0
+; authordep Pod::Weaver::Section::Region = 0
+; authordep Pod::Weaver::Section::Source::DefaultGitHub = 0
+; authordep Pod::Weaver::Section::Version = 0
+; authordep Test::NoTabs = 0
+; authordep Test::Warnings = 0
