@@ -7,7 +7,7 @@ header:
 prereqs:
   runtime:
     requires:
-     - perl: 5.010001
+     - perl: 5.010000
      - Moose: 2.0000
      - Badge::Depot
      - JSON::MaybeXS
